wildcard/external-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: gateways
  annotations:
    networking.gke.io/certmap: star-demo-gke-ninja
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds: 
        - kind: HTTPRoute
      namespaces:
        from: All
  addresses:
    - type:
