wildcard/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - image: httpd
          name: apache
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: apache
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: apache
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: gateways
  hostnames:
  - "apache.demo.gke.ninja"
  rules:
  - backendRefs:
    - name: apache
      port: 80
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: apache-internal
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: gateways
  hostnames:
  - "apache.internal.gke.ninja"
  rules:
  - backendRefs:
    - name: apache
      port: 80
