wildcard/nginx-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: nginx
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: gateways
  hostnames:
  - "nginx.demo.gke.ninja"
  rules:
  - backendRefs:
    - name: nginx
      port: 80
